[package]
name = "ptools"
version = "0.2.0"
authors = ["John Gallagher"]
license = "Apache-2.0"
description = "Utilities for inspecting Linux processes"
readme = "README.md"

[lib]
name = "ptools"
path = "src/ptools.rs"

[[bin]]
name = "pargs"
path = "src/bin/pargs.rs"
[[bin]]
name = "penv"
path = "src/bin/penv.rs"
[[bin]]
name = "pfiles"
path = "src/bin/pfiles.rs"
[[bin]]
name = "ptree"
path = "src/bin/ptree.rs"

[[bin]]
name = "epoll_example"
path = "src/bin/testing/epoll.rs"
[[bin]]
name = "netlink_example"
path = "src/bin/testing/netlink.rs"

[profile.release]
debug = true
lto = true
panic = "abort" # Save size. We don't need unwinding anyway.
# TODO is there any way to remove the ability to display backtraces? This would
# likely shave another 50K or so off the binary size, and may not be necessary
# if systems are typically configured to dump core on SIGABRT

[dependencies]
getopts = "0.2.15"
nix = "0.12.0"
libc = "0.2.48"

[package.metadata.deb]
maintainer = "Delphix Engineering <eng@delphix.com>"
section = "debug"
copyright = "2018, 2020 Delphix"

extended-description = """\
A collection of utilities for inspecting the state of processes, modeled \
after the tools by the same name which exist on Solaris/Illumos."""

separate-debug-symbols = true
assets = [
  # List files we want explicitly so that we don't get the binaries intended for
  # testing.
  ["target/release/pargs", "usr/bin/", "755"],
  ["target/release/penv", "usr/bin/", "755"],
  ["target/release/pfiles", "usr/bin/", "755"],
  ["target/release/ptree", "usr/bin/", "755"],
]
